--- a/part3/phonebook-backend/package.json
+++ b/part3/phonebook-backend/package.json
@@ -10,7 +10,8 @@
     "build:ui": "rm -rf build && cd ../../fullstack/part2/phonebook/ && npm run build --prod && cp -r build ../../../fullstack2019/phonebook-backend/",
     "deploy": "git push heroku master",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",
-    "logs:prod": "heroku logs --tail"
+    "logs:prod": "heroku logs --tail",
+    "lint": "eslint ."
   },
   "author": "",
   "license": "ISC",
@@ -20,9 +21,10 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.6.1",
+    "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.9.1"
   },
   "devDependencies": {
-    "nodemon": "^1.19.1"
+    "eslint": "latest"
   }
 }
